--- a/ML-Lab-4.ipynb
+++ b/ML-Lab-4.ipynb
@@ -1777,6 +1777,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = { 'n_hidden':30, \n",
+    "         'C':0.1, 'epochs':500, 'eta':0.001, \n",
+    "         'alpha':0.001, 'decrease_const':1e-5, 'minibatches':50,\n",
+    "         'shuffle':True,'random_state':1}\n",
+    "# model = NormalizedTwoLayerPerceptron(n_hidden=30, C=0.0, epochs=500, eta=0.001, random_state=42)\n",
+    "model = Normalized(**params)\n",
+    "model.fit(X_train, y_train, print_progress=True)\n",
+    "\n",
+    "# plot the loss over time to ensure convergence\n",
+    "plt.plot(range(1, len(model.cost_)+1), model.cost_)\n",
+    "plt.xlabel(\"Epochs\")\n",
+    "plt.ylabel(\"Cost\")\n",
+    "plt.show()\n",
+    "\n",
+    "# evaluate the model on the test set\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# convert y_pred into a one-hot encoded dataframe\n",
+    "y_pred = convert_data(y_pred)\n",
+    "\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy:\", accuracy)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
