--- a/ML-Lab-4_CookV2.ipynb
+++ b/ML-Lab-4_CookV2.ipynb
@@ -1862,7 +1862,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comparison "
+    "### Performance Comparison \n",
+    "The second model (normalized model) and the third model (normalized and one-hot encoded) perform significantly better than the first model (raw data). The first model has an accuracy of about 25%, while the second and third models have similar accuracies of about 73%. More specifically, the second model has an accuracy of about 73.3%, and the third model has an accuracy of about 73.6%, which is only a slight increase.\n",
+    "\n",
+    "The first model, which uses raw data without normalization or one-hot encoding, achieved an accuracy of about 25%. Since the target variable, ChildPovertyClass, has 4 classes, an accuracy of 25% is equivalent to the accuracy of random guessing within 4 classes, showing that this model is not learning effectively. This low accuracy likely stems from the network struggling with features that are on very different scales. For example, numerical features like population may have much larger values than percentage-based features like poverty rate. Without normalization, the model may focus more on features with larger values and overlook smaller but potentially important features, leading to poor performance.\n",
+    "\n",
+    "After normalization has been applied to the model, the accuracy increases significantly, rising from about 25% to 73.3%. As mentioned previously, scaling the features to similar ranges keeps the network from being biased towards features with larger ranges. This enables the network to update weights more effectively, allowing it to learn more meaningful patterns and resulting in a notably higher accuracy.\n",
+    "\n",
+    "Adding one-hot encoding in the third model yields an accuracy of about 73.6%, resulting in a minor performance increase. With one-hot encoding, categorical variables are represented as separate binary features, meaning there is no risk of the model mistakenly assuming an ordinal relationship between categories. One-hot encoding helps the network treat categorical features as distinct, non-ordered values, typically allowing it to learn more effectively from these variables. The only categorical variables in this dataset are ChildPovertyClass and States. Thus, one-hot encoding may not affect the performance significantly because the categorical features in this dataset may not be as influential as the numerical features in predicting the child poverty rate.\n",
+    "\n",
+    "The most significant improvement in accuracy comes from normalizing the numeric features, which helps the network treat all features equally and allows it to learn better from the given dataset. One-hot encoding does not improve performance substantially compared to normalization on its own. This is likely because for this dataset, the categorical features are less impactful than the numerical features. However, one-hot encoding is still important for handling categorical data correctly and ensuring that the model doesn't misinterpret these features. Therefore, the primary reason for the improved performance is the normalization of continuous numeric features, but the addition of one-hot encoding helps to prevent the model from making incorrect assumptions about categorical variables."
    ]
   },
   {
@@ -2771,7 +2780,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
