--- a/ML-Lab-4_CookV3.ipynb
+++ b/ML-Lab-4_CookV3.ipynb
@@ -2032,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2075,7 +2075,6 @@
     "         'C':0.1, 'epochs':500, 'eta':0.001, \n",
     "         'alpha':0.001, 'decrease_const':1e-5, 'minibatches':50,\n",
     "         'shuffle':True,'random_state':1}\n",
-    "# model = TLPVectorizedMiniBatchCrossEntropyGlorot(n_hidden=30, C=0.0, epochs=50, eta=0.001, random_state=42)\n",
     "model = ThreeLayerPerceptron(**params)\n",
     "model.fit(X_train, y_train, print_progress=True)\n",
     "model.plot_grad_avg()\n",
@@ -2572,6 +2571,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Layer Perceptron Overview:\n",
+    "(With Normalization + One Hot Encoding)\n",
+    "\n",
+    "- 2nd Layer: 74.044%\n",
+    "- 3rd Layer: 74.243%\n",
+    "- 4th Layer: 73.762%\n",
+    "- 5th Layer: 73.274%\n",
+    "\n",
+    "\n",
+    "Overall, we saw a performance increase between the 2nd and 3rd layer, but a decrease in overall performance afterwards. This suggests that more layers don't always mean a better performance. However, parameters play a large role in results, and tuning the parameters will potentially increase the accuracy.\n",
+    "\n",
+    "Let's now finetune the parameters using RMS Prop, and hopefully increase the accuracy levels."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2725,7 +2742,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 4-Exceptional Work"
+    "As we can see, the accuracy improves from the 5th layer model upon running adaptive parameters to the model. If we added further epochs, the model could potentially become more accurate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 4-Exceptional Work - ADAM"
    ]
   },
   {
@@ -2844,11 +2868,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "When compared with the other methods used, AdaM converges much sooner (with fewer epochs) than any of the other methods.  This can be seen in the graphs above, as AdaM converges after only about 10 or so epochs, while RMSprop appears to take at least twice as many, and the other methods used don't converge nearly as cleanly as either RMSprop or AdaM and take significantly longer to converge.  AdaM typically converges with fewer epochs than other methods across the board, as it combines the advantages of both RMSprop and Momentum, two other optimization algorithms.  By using both momentum and adaptive learning rates simultaneously, AdaM is able to handle noisy gradients and adjust the learning rate for each parameter quickly, helping it to converge with fewer epochs.  AdaM also includes bias correction that helps to improve stability early in training, making it a more efficient optimizer."
+   ]
   }
  ],
  "metadata": {
