added descriptions and references

--- a/ML-Lab-4_CookV3.ipynb
+++ b/ML-Lab-4_CookV3.ipynb
@@ -1321,9 +1321,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are balancing data on only Training data based on classes initialized above. \n",
+    "We are balancing the dataset only on the training data based on classes initialized above. We chose to balance only the training set, as the objective of balancing data is to ensure the model learns evenly. If certain classes are overrepresented, the model may become biased towards these classes, leading to poor performance on the underrepresented classes. By balancing the training set, we give the model a fair chance to learn features of each class, improving its ability to accurately predict the child poverty rate.\n",
     "\n",
-    "We chose to balance the data only on the training set, as the objective of balancing data is to ensure the model learns evenly. However, if we introduce a balanced testing set, this could bias the model, as well as preprocess the data, leading to unnecessary data snooping."
+    "In the testing set, though, balancing is not needed, as it should reflect the true distribution of the classes as they normally exist. Balancing the testing set could introduce bias, as well as preprocess the data, leading to unnecessary data snooping. Balancing only the training set and not the testing set allows us to accurately assess the model's performance on future unseen data."
    ]
   },
   {
@@ -2583,7 +2583,9 @@
     "- 5th Layer: 73.274%\n",
     "\n",
     "\n",
-    "Overall, we saw a performance increase between the 2nd and 3rd layer, but a decrease in overall performance afterwards. This suggests that more layers don't always mean a better performance. However, parameters play a large role in results, and tuning the parameters will potentially increase the accuracy.\n",
+    "Overall, we observed a performance increase between the 2-layer and 3-layer models, which indicates that adding an additional layer helped capture more complex patterns. However, performance decreased slightly with the 4-layer and 5-layer models, suggesting that adding more layers does not always lead to better performance. However, parameters play a large role in results, and fine-tuning the parameters could potentially increase the accuracy across deeper models and offset the performance decline in the 4-layer and 5-layer models.\n",
+    "\n",
+    "We can finetune the parameters with RMS Prop, an adaptive learning rate optimization algorithm. Also known as Root Mean Square Propagation, RMS Prop was created to overcome the limitations of the Stochastic Gradient Descent (SGD) and AdaGrad algorithms. SGD uses a constant learning rate, while AdaGrad decreases the learning rate too quickly. RMSProp improves by maintaining a moving average of squared gradients to normalize gradient updates, effectively adapting the learning rate based on the recent behavior of gradients (\"RMSProp Optimizer\").\n",
     "\n",
     "Let's now finetune the parameters using RMS Prop, and hopefully increase the accuracy levels."
    ]
@@ -2742,7 +2744,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, the accuracy improves from the 5th layer model upon running adaptive parameters to the model. If we added further epochs, the model could potentially become more accurate."
+    "The accuracy of the 5-layer model increased from 73.274% to 73.996% after using RMSProp as the adaptive learning method for this model. RMSProp enhanced the performance of the model by dynamically adjusting the learning rate, which helped to stabilize training. Using RMSProp also addressed issues such as vanishing gradients, allowing the 5-layer model to learn more effectively. If we added further epochs, the model would likely improve in accuracy because RMSProp would continue adapting the learning rate, optimizing the model's convergence over time."
    ]
   },
   {
@@ -2872,6 +2874,17 @@
    "metadata": {},
    "source": [
     "When compared with the other methods used, AdaM converges much sooner (with fewer epochs) than any of the other methods.  This can be seen in the graphs above, as AdaM converges after only about 10 or so epochs, while RMSprop appears to take at least twice as many, and the other methods used don't converge nearly as cleanly as either RMSprop or AdaM and take significantly longer to converge.  AdaM typically converges with fewer epochs than other methods across the board, as it combines the advantages of both RMSprop and Momentum, two other optimization algorithms.  By using both momentum and adaptive learning rates simultaneously, AdaM is able to handle noisy gradients and adjust the learning rate for each parameter quickly, helping it to converge with fewer epochs.  AdaM also includes bias correction that helps to improve stability early in training, making it a more efficient optimizer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reference\n",
+    "\n",
+    "“US Census Demographic Data.” Kaggle, 3 Mar. 2019, https://www.kaggle.com/muonneutrino/us-census-demographic-data/data. \n",
+    "\n",
+    "\"RMSProp Optimizer in Deep Learning.\" GeeksForGeeks, 24 July 2024, https://www.geeksforgeeks.org/rmsprop-optimizer-in-deep-learning/."
    ]
   }
  ],
